white space issue with InfoParts template and unable to filter TaskActivities model by usergroup

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -16,3 +16,8 @@ overflow: auto;
 .table-wrapper-scroll-y {
 display: block;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
